--- a/src/components/GlobalCharacterOverlay/SenToggle.less
+++ b/src/components/GlobalCharacterOverlay/SenToggle.less
@@ -1,9 +1,7 @@
 .sen-toggle-btn {
-    position: fixed;
-    bottom: 24px;
-    right: 24px;
-    width: 64px;
-    height: 64px;
+    position: relative;
+    width: 56px;
+    height: 56px;
     border-radius: 50%;
     background: white;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
