--- a/src/components/common/Button/styles.less
+++ b/src/components/common/Button/styles.less
@@ -19,8 +19,8 @@
 
     &--primary {
         &.ant-btn-primary {
-            background: linear-gradient(135deg, #d4a574 0%, #b08d55 100%);
-            border-color: #b08d55;
+            background: linear-gradient(135deg, #F43F5E 0%, #E11D48 100%);
+            border-color: #E11D48;
             text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
 
             &:hover {
@@ -32,11 +32,11 @@
 
     &--outline {
         &.ant-btn-default {
-            border-color: #d4a574;
+            border-color: #F43F5E;
             color: #8d6e63;
 
             &:hover {
-                border-color: #b08d55;
+                border-color: #E11D48;
                 color: #5d4037;
                 background: rgba(212, 165, 116, 0.1);
             }
