--- a/src/layouts/MainLayout/styles.less
+++ b/src/layouts/MainLayout/styles.less
@@ -13,7 +13,7 @@
 .logo {
   font-size: 24px;
   font-weight: 600;
-  color: #d4a574;
+  color: #F43F5E;
   white-space: nowrap;
   transition: all 0.3s ease;
 }
