--- a/src/styles/antd-custom.less
+++ b/src/styles/antd-custom.less
@@ -13,6 +13,11 @@
     background: transparent;
 }
 
+.ant-pro-layout .ant-pro-layout-content {
+    padding-block: 16px;
+    padding-inline: 24px;
+}
+
 .ant-menu-item-selected::after {
     border-right-color: #F43F5E !important;
 }
